--- a/dot_config/git/config.tmpl
+++ b/dot_config/git/config.tmpl
@@ -36,7 +36,7 @@
 	colorMoved = zebra
 [core]
 {{- if .chezmoi.config.data.isWorkMachine }}
-	editor = cursor --wait
+	editor = code --wait
 {{- else }}
 	editor = code --wait
 {{- end }}
