--- a/dot_config/mise/config.toml.tmpl
+++ b/dot_config/mise/config.toml.tmpl
@@ -9,7 +9,9 @@ enter = 'mise i -q'
 
 [settings]
 # configure `mise install` to always keep the downloaded archive
-always_keep_download = false
+always_keep_download = true
+auto_install = true
+experimental = true
 
 # config files with these prefixes will be trusted by default
 trusted_config_paths = [
